objects/SE_Activity__c.object
<CustomObject>
    <description>Opportunity Activities of an SE</description>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Used to record the date of the activity</inlineHelpText>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bug_Id__c</fullName>
        <inlineHelpText>Bugzillia number</inlineHelpText>
        <label>Bug Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GMS_In_POC__c</fullName>
        <label>GMS In POC</label>
        <picklist>
            <picklistValues>
                <fullName>GMS Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMS Deployed - Reports forwarded to Evalsupport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GMS_Release__c</fullName>
        <inlineHelpText>Enter the release information for the GMS used in this POC</inlineHelpText>
        <label>GMS Release</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>set flag for latest status update</inlineHelpText>
        <label>Latest Health Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>use this if the activity is realted to a lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>SE Activities</relationshipLabel>
        <relationshipName>R00N50000001oFpMEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SE Activities</relationshipLabel>
        <relationshipName>R00N50000001oBP9EAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC_Health__c</fullName>
        <inlineHelpText>Display Status of POC for Status Update type entries. Black = Awaiting Start, Orange = Stale</inlineHelpText>
        <label>POC Health</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>for issue entries that have a case related to them</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>SE Activities</relationshipLabel>
        <relationshipName>R00N50000001oBPPEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>issue you type that has an RMA realted to them</inlineHelpText>
        <label>Related RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>SE Activities</relationshipLabel>
        <relationshipName>R00N50000001oBPBEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <inlineHelpText>Identifiy which release is relevant to this status update</inlineHelpText>
        <label>Release</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Use this to categorize the activity</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>POC Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Customer Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POC Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Disapproval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SE Activity</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>SE Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SE Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>POC_Health_Check</fullName>
        <active>true</active>
        <description>Ensure that a POC Health is set for health updates</description>
        <errorConditionFormula>AND
(
 ISPICKVAL( Type__c , &quot;Health Update&quot;) ,
NOT (OR(ISPICKVAL(POC_Health__c, &quot;Green&quot;),ISPICKVAL(POC_Health__c, &quot;Yellow&quot;) ,ISPICKVAL(POC_Health__c, &quot;Black&quot;) ,ISPICKVAL(POC_Health__c, &quot;Red&quot;),ISPICKVAL(POC_Health__c, &quot;Orange&quot;))
)
)</errorConditionFormula>
        <errorDisplayField>POC_Health__c</errorDisplayField>
        <errorMessage>POC Health must be set upon health updates</errorMessage>
    </validationRules>
</CustomObject>